# QtGuiDemo

./: CMakeLists.txt  CodingConverter.cpp  CodingConverter.h  Demo.h  DeviceCodingData.cpp  JsonManager.cpp  JsonManager.h  Makefile  README.md  RasterWindow.h  demo.cpp
